// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty expenses 1`] = `
<div
  className="container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item__message"
    >
      <span
        className=""
      >
        No expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={0}
      createdAt={0}
      description="new expense"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={109952}
      createdAt={-345600000}
      description="new expense2"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={500}
      createdAt={345600000}
      description="new expense3"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
